// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`services data All services and standards for org 1`] = `
Object {
  "data": Object {
    "root": Object {
      "org": Object {
        "services": Array [
          Object {
            "account_reg_digital_status": true,
            "application_digital_status": null,
            "authentication_status": true,
            "collects_fees": false,
            "comment": null,
            "cra_buisnss_number_is_identifier": false,
            "decision_digital_status": null,
            "description": "Provide a list of the most recent public advisories for high-risk mitten recalls.",
            "digital_enablement_comment": "Clients can subscribe to the online notification service. This service does not include a decision interaction point.",
            "feedback_channels": Array [
              "Online",
              "Postal Mail",
              "Fax",
              "Email",
              "In-Person",
              "Telephone",
            ],
            "in_person_applications": 0,
            "is_active": true,
            "issuance_digital_status": true,
            "issue_res_digital_status": true,
            "last_gender_analysis": null,
            "mail_applications": null,
            "name": "Recall Notification – Mittens",
            "online_applications": 4789,
            "org": Object {
              "name": "Treasury Board of Canada Secretariat",
            },
            "org_id": "326",
            "other_channel_applications": 8044,
            "program_ids": Array [
              "TBC-BXB02",
              "TBC-BXA01",
              "TBC-BXA02",
              "TBC-BXA03",
            ],
            "programs": Array [
              Object {
                "name": "Digital Policy",
              },
              Object {
                "name": "Oversight and Treasury Board Support",
              },
              Object {
                "name": "Expenditure Data, Analysis, Results, and Reviews",
              },
              Object {
                "name": "Results and Performance Reporting Policies and Initiatives",
              },
            ],
            "scope": Array [
              "Internal Enterprise Service",
            ],
            "service_id": "1",
            "service_type": "Communications Services",
            "sin_is_identifier": false,
            "standards": Array [
              Object {
                "channel": "online",
                "count": 4225,
                "is_active": true,
                "is_target_met": true,
                "last_gcss_tool_year": "2018",
                "lower": 99.8,
                "met_count": 4225,
                "name": "Availability: 24 x 7 x 365, 99.8% of the time",
                "other_type_comment": null,
                "rtp_urls": Array [
                  "https://www.canada.ca/gcinfobase",
                ],
                "service_id": "1",
                "standard_id": "4",
                "standard_type": "access",
                "target_comment": null,
                "target_type": "BERNOULLI",
                "upper": 100,
                "urls": Array [
                  "https://www.canada.ca/gcinfobase",
                ],
              },
            ],
            "target_groups": Array [
              "Economic Segments",
            ],
            "telephone_enquires": null,
            "url": "https://www.canada.ca/gcinfobase,https://www.canada.ca/infobasegc",
            "website_visits": null,
            "year": "2018",
          },
          Object {
            "account_reg_digital_status": false,
            "application_digital_status": false,
            "authentication_status": false,
            "collects_fees": false,
            "comment": null,
            "cra_buisnss_number_is_identifier": true,
            "decision_digital_status": false,
            "description": "Provide regulated parties to request a review of a regulatory decision made by the Department of Mitten's staff.",
            "digital_enablement_comment": null,
            "feedback_channels": Array [
              "Email",
              "Telephone",
            ],
            "in_person_applications": null,
            "is_active": true,
            "issuance_digital_status": false,
            "issue_res_digital_status": false,
            "last_gender_analysis": null,
            "mail_applications": null,
            "name": "Regulatory Complaints – Mittens",
            "online_applications": null,
            "org": Object {
              "name": "Treasury Board of Canada Secretariat",
            },
            "org_id": "326",
            "other_channel_applications": 10446,
            "program_ids": Array [
              "TBC-BXB02",
            ],
            "programs": Array [
              Object {
                "name": "Digital Policy",
              },
            ],
            "scope": Array [
              "Internal Enterprise Service",
              "External Service",
            ],
            "service_id": "2",
            "service_type": "Advisory Services,Acquisition Services",
            "sin_is_identifier": null,
            "standards": Array [
              Object {
                "channel": "online",
                "count": 3543,
                "is_active": true,
                "is_target_met": true,
                "last_gcss_tool_year": "2018",
                "lower": 50,
                "met_count": 2000,
                "name": "The Mitten Contact Centre will normally provide an initial response to emails, online submissions and faxes within 3 business days.",
                "other_type_comment": null,
                "rtp_urls": Array [
                  "https://www.canada.ca/gcinfobase",
                ],
                "service_id": "2",
                "standard_id": "5",
                "standard_type": "timeliness",
                "target_comment": null,
                "target_type": "BERNOULLI",
                "upper": 100,
                "urls": Array [
                  "https://www.canada.ca/gcinfobase",
                ],
              },
            ],
            "target_groups": Array [
              "Economic Segments",
            ],
            "telephone_enquires": null,
            "url": "https://www.canada.ca/gcinfobase",
            "website_visits": null,
            "year": "2018",
          },
          Object {
            "account_reg_digital_status": true,
            "application_digital_status": true,
            "authentication_status": true,
            "collects_fees": true,
            "comment": null,
            "cra_buisnss_number_is_identifier": null,
            "decision_digital_status": true,
            "description": "The Canada Mitten Plan provides contributors and their families with partial replacement of mittens in the case of loss.",
            "digital_enablement_comment": null,
            "feedback_channels": Array [
              "Other",
            ],
            "in_person_applications": null,
            "is_active": true,
            "issuance_digital_status": true,
            "issue_res_digital_status": false,
            "last_gender_analysis": null,
            "mail_applications": null,
            "name": "Canada Mitten Plan (CMP) Regular Benefits",
            "online_applications": 571,
            "org": Object {
              "name": "Treasury Board of Canada Secretariat",
            },
            "org_id": "326",
            "other_channel_applications": 448235,
            "program_ids": Array [
              "TBC-BXB02",
              "TBC-BXA01",
            ],
            "programs": Array [
              Object {
                "name": "Digital Policy",
              },
              Object {
                "name": "Oversight and Treasury Board Support",
              },
            ],
            "scope": Array [
              "External Service",
            ],
            "service_id": "3",
            "service_type": "Regulatory Compliance and Enforcement",
            "sin_is_identifier": true,
            "standards": Array [
              Object {
                "channel": "online",
                "count": 123,
                "is_active": true,
                "is_target_met": true,
                "last_gcss_tool_year": "2018",
                "lower": 99.15,
                "met_count": 123,
                "name": "Our goal is for Canada Mitten Plan retirement benefits to be delivered before the first snowfall",
                "other_type_comment": null,
                "rtp_urls": Array [
                  "https://www.canada.ca/gcinfobase",
                ],
                "service_id": "3",
                "standard_id": "1",
                "standard_type": "timeliness",
                "target_comment": null,
                "target_type": "BERNOULLI",
                "upper": 100,
                "urls": Array [
                  "https://www.canada.ca/gcinfobase",
                  "https://www.canada.ca/infobasegc",
                ],
              },
              Object {
                "channel": "online",
                "count": 31,
                "is_active": true,
                "is_target_met": false,
                "last_gcss_tool_year": "2018",
                "lower": 90,
                "met_count": 18,
                "name": "Mitten systems online",
                "other_type_comment": null,
                "rtp_urls": Array [
                  "https://www.canada.ca/gcinfobase",
                ],
                "service_id": "3",
                "standard_id": "2",
                "standard_type": "access",
                "target_comment": "whoops",
                "target_type": "BERNOULLI",
                "upper": 100,
                "urls": Array [
                  "https://www.canada.ca/gcinfobase",
                ],
              },
            ],
            "target_groups": Array [
              "Economic Segments",
              "Environmental",
              "Foreign Entities",
              "Internal to Government",
              "Non-Profit Institutions and Organizations",
              "Persons",
              "Provinces",
              " Territories and Communities",
            ],
            "telephone_enquires": null,
            "url": "https://www.canada.ca/gcinfobase",
            "website_visits": null,
            "year": "2018",
          },
          Object {
            "account_reg_digital_status": true,
            "application_digital_status": true,
            "authentication_status": true,
            "collects_fees": false,
            "comment": null,
            "cra_buisnss_number_is_identifier": true,
            "decision_digital_status": true,
            "description": "Email enables individuals working for the Government of Canada to send and receive electronic mail messages and to manage a calendar, tasks, an address book and personal contacts.",
            "digital_enablement_comment": null,
            "feedback_channels": Array [
              "Postal Mail",
              "Email",
              "In-Person",
              "Telephone",
            ],
            "in_person_applications": 0,
            "is_active": true,
            "issuance_digital_status": true,
            "issue_res_digital_status": true,
            "last_gender_analysis": null,
            "mail_applications": 0,
            "name": "Mitten-mail",
            "online_applications": 134939,
            "org": Object {
              "name": "Treasury Board of Canada Secretariat",
            },
            "org_id": "326",
            "other_channel_applications": 0,
            "program_ids": Array [
              "TBC-BXA03",
            ],
            "programs": Array [
              Object {
                "name": "Results and Performance Reporting Policies and Initiatives",
              },
            ],
            "scope": Array [
              "External Service",
            ],
            "service_id": "4",
            "service_type": "Regulatory Compliance and Enforcement",
            "sin_is_identifier": false,
            "standards": Array [
              Object {
                "channel": "online",
                "count": 9757,
                "is_active": true,
                "is_target_met": false,
                "last_gcss_tool_year": "2018",
                "lower": 90,
                "met_count": 0,
                "name": "90% of clients report that MittemMail met their needs",
                "other_type_comment": "Satisfaction",
                "rtp_urls": Array [
                  "https://www.canada.ca/gcinfobase",
                ],
                "service_id": "4",
                "standard_id": "3",
                "standard_type": "other",
                "target_comment": "better luck next time",
                "target_type": "BERNOULLI",
                "upper": 100,
                "urls": Array [
                  "https://www.canada.ca/gcinfobase",
                ],
              },
            ],
            "target_groups": Array [
              "Economic Segments",
            ],
            "telephone_enquires": 30000,
            "url": "https://www.canada.ca/gcinfobase",
            "website_visits": 442967,
            "year": "2018",
          },
        ],
      },
    },
  },
}
`;

exports[`services data All services and standards for program 1`] = `
Object {
  "data": Object {
    "root": Object {
      "program": Object {
        "services": Array [
          Object {
            "account_reg_digital_status": true,
            "application_digital_status": null,
            "authentication_status": true,
            "collects_fees": false,
            "comment": null,
            "cra_buisnss_number_is_identifier": false,
            "decision_digital_status": null,
            "description": "Provide a list of the most recent public advisories for high-risk mitten recalls.",
            "digital_enablement_comment": "Clients can subscribe to the online notification service. This service does not include a decision interaction point.",
            "feedback_channels": Array [
              "Online",
              "Postal Mail",
              "Fax",
              "Email",
              "In-Person",
              "Telephone",
            ],
            "in_person_applications": 0,
            "is_active": true,
            "issuance_digital_status": true,
            "issue_res_digital_status": true,
            "last_gender_analysis": null,
            "mail_applications": null,
            "name": "Recall Notification – Mittens",
            "online_applications": 4789,
            "org": Object {
              "name": "Treasury Board of Canada Secretariat",
            },
            "org_id": "326",
            "other_channel_applications": 8044,
            "program_ids": Array [
              "TBC-BXB02",
              "TBC-BXA01",
              "TBC-BXA02",
              "TBC-BXA03",
            ],
            "programs": Array [
              Object {
                "name": "Digital Policy",
              },
              Object {
                "name": "Oversight and Treasury Board Support",
              },
              Object {
                "name": "Expenditure Data, Analysis, Results, and Reviews",
              },
              Object {
                "name": "Results and Performance Reporting Policies and Initiatives",
              },
            ],
            "scope": Array [
              "Internal Enterprise Service",
            ],
            "service_id": "1",
            "service_type": "Communications Services",
            "sin_is_identifier": false,
            "standards": Array [
              Object {
                "channel": "online",
                "count": 4225,
                "is_active": true,
                "is_target_met": true,
                "last_gcss_tool_year": "2018",
                "lower": 99.8,
                "met_count": 4225,
                "name": "Availability: 24 x 7 x 365, 99.8% of the time",
                "other_type_comment": null,
                "rtp_urls": Array [
                  "https://www.canada.ca/gcinfobase",
                ],
                "service_id": "1",
                "standard_id": "4",
                "standard_type": "access",
                "target_comment": null,
                "target_type": "BERNOULLI",
                "upper": 100,
                "urls": Array [
                  "https://www.canada.ca/gcinfobase",
                ],
              },
            ],
            "target_groups": Array [
              "Economic Segments",
            ],
            "telephone_enquires": null,
            "url": "https://www.canada.ca/gcinfobase,https://www.canada.ca/infobasegc",
            "website_visits": null,
            "year": "2018",
          },
          Object {
            "account_reg_digital_status": true,
            "application_digital_status": true,
            "authentication_status": true,
            "collects_fees": true,
            "comment": null,
            "cra_buisnss_number_is_identifier": null,
            "decision_digital_status": true,
            "description": "The Canada Mitten Plan provides contributors and their families with partial replacement of mittens in the case of loss.",
            "digital_enablement_comment": null,
            "feedback_channels": Array [
              "Other",
            ],
            "in_person_applications": null,
            "is_active": true,
            "issuance_digital_status": true,
            "issue_res_digital_status": false,
            "last_gender_analysis": null,
            "mail_applications": null,
            "name": "Canada Mitten Plan (CMP) Regular Benefits",
            "online_applications": 571,
            "org": Object {
              "name": "Treasury Board of Canada Secretariat",
            },
            "org_id": "326",
            "other_channel_applications": 448235,
            "program_ids": Array [
              "TBC-BXB02",
              "TBC-BXA01",
            ],
            "programs": Array [
              Object {
                "name": "Digital Policy",
              },
              Object {
                "name": "Oversight and Treasury Board Support",
              },
            ],
            "scope": Array [
              "External Service",
            ],
            "service_id": "3",
            "service_type": "Regulatory Compliance and Enforcement",
            "sin_is_identifier": true,
            "standards": Array [
              Object {
                "channel": "online",
                "count": 123,
                "is_active": true,
                "is_target_met": true,
                "last_gcss_tool_year": "2018",
                "lower": 99.15,
                "met_count": 123,
                "name": "Our goal is for Canada Mitten Plan retirement benefits to be delivered before the first snowfall",
                "other_type_comment": null,
                "rtp_urls": Array [
                  "https://www.canada.ca/gcinfobase",
                ],
                "service_id": "3",
                "standard_id": "1",
                "standard_type": "timeliness",
                "target_comment": null,
                "target_type": "BERNOULLI",
                "upper": 100,
                "urls": Array [
                  "https://www.canada.ca/gcinfobase",
                  "https://www.canada.ca/infobasegc",
                ],
              },
              Object {
                "channel": "online",
                "count": 31,
                "is_active": true,
                "is_target_met": false,
                "last_gcss_tool_year": "2018",
                "lower": 90,
                "met_count": 18,
                "name": "Mitten systems online",
                "other_type_comment": null,
                "rtp_urls": Array [
                  "https://www.canada.ca/gcinfobase",
                ],
                "service_id": "3",
                "standard_id": "2",
                "standard_type": "access",
                "target_comment": "whoops",
                "target_type": "BERNOULLI",
                "upper": 100,
                "urls": Array [
                  "https://www.canada.ca/gcinfobase",
                ],
              },
            ],
            "target_groups": Array [
              "Economic Segments",
              "Environmental",
              "Foreign Entities",
              "Internal to Government",
              "Non-Profit Institutions and Organizations",
              "Persons",
              "Provinces",
              " Territories and Communities",
            ],
            "telephone_enquires": null,
            "url": "https://www.canada.ca/gcinfobase",
            "website_visits": null,
            "year": "2018",
          },
        ],
      },
    },
  },
}
`;
